--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "@testing-library/user-event": "^13.2.1",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.5.0",
+    "i18next": "^23.4.6",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "sass": "^1.66.1",
