--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3'
 
 services:
   app:
@@ -6,8 +6,5 @@ services:
     image: landing
     build:
       context: .
-      target: development
-    volumes:
-      - ./src:/app/src
     ports:
-      - "8083:8083"
+      - 8083:8083
