--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3.8"
 
 services:
   app:
@@ -6,5 +6,8 @@ services:
     image: landing
     build:
       context: .
+      target: development
+    volumes:
+      - ./src:/app/src
     ports:
-      - 8003:8003
+      - "8003:3000"
